cabal-version:   3.0
name:            daml-cucumber
version:         0.1.0.0
synopsis:        Cucumber testing with daml script
description:
  Parse cucumber tests and pass them to a daml script for execution

homepage:        https://github.com/obsidiansystems/daml-cucumber
license:         BSD-3-Clause
license-file:    LICENSE
author:          Obsidian Systems LLC
maintainer:      maintainer@obsidian.systems
copyright:       2024 Obsidian Systems LLC
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Daml.Cucumber
    Daml.Cucumber.Daml.Parse
    Daml.Cucumber.Daml.Parser
    Daml.Cucumber.Daml.Tokenizer
    Daml.Cucumber.LSP
    Daml.Cucumber.Parse
    Daml.Cucumber.Types

  build-depends:
    , abacate               >=0.0     && <0.1
    , aeson                 >=2.1.1   && <2.2
    , base                  >=4.14    && <5
    , bytestring            >=0.10.12 && <0.12
    , casing                >=0.1.4   && <0.2
    , containers            >=0.6.5   && <0.7
    , directory             >=1.3.6   && <1.4
    , extra                 >=1.7.10  && <1.8
    , filepath              >=1.4.2   && <1.5
    , mtl                   >=2.2.2   && <2.3
    , neat-interpolation    >=0.4     && <0.6
    , optparse-applicative  >=0.16.1  && <0.17
    , parsec                >=3.1.14  && <3.2
    , process               >=1.6.13  && <1.7
    , reflex                >=0.9.2   && <0.10
    , reflex-process        >=0.3.3   && <0.4
    , tagsoup               >=0.14.8  && <0.15
    , temporary             >=1.3     && <1.4
    , text                  >=1.2.4   && <2.3
    , unix                  >=2.7.2   && <2.8
    , which                 >=0.2     && <0.3

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    QuasiQuotes
    RecursiveDo
    ScopedTypeVariables
    TemplateHaskell

executable daml-cucumber
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , daml-cucumber
    , optparse-applicative
    , temporary
    , text

  ghc-options:      -O -threaded
  hs-source-dirs:   src-exe
  default-language: Haskell2010
