cabal-version:   3.0
name:            daml-cucumber
version:         1.0.0.0
synopsis:        Cucumber testing with daml script
description:
  Parse cucumber gherkin tests, associate them with daml script tests, and run
  them.

homepage:        https://github.com/obsidiansystems/daml-cucumber
license:         BSD-3-Clause
license-file:    LICENSE
author:          Obsidian Systems LLC
maintainer:      maintainer@obsidian.systems
copyright:       2024 Obsidian Systems LLC
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Daml.Cucumber
    Daml.Cucumber.Utils
    Daml.Cucumber.Daml.Parse
    Daml.Cucumber.Daml.Parser
    Daml.Cucumber.Daml.Tokenizer
    Daml.Cucumber.Daml.Yaml
    Daml.Cucumber.Log
    Daml.Cucumber.LSP
    Daml.Cucumber.Parse
    Daml.Cucumber.Types

  build-depends:
    , abacate                >=0.0     && <0.1
    , aeson                  >=2.1.1   && <2.2
    , ansi-terminal          >=0.11    && <1.1
    , base                   >=4.14    && <5
    , bytestring             >=0.10.12 && <0.11
    , casing                 >=0.1.4   && <0.2
    , containers             >=0.6.5   && <0.7
    , directory              >=1.3.6   && <1.4
    , directory-contents     >=0.2     && <0.3
    , filepath               >=1.4.2   && <1.5
    , fsnotify               >=0.4     && <0.5
    , logging-effect         >=1.3     && <1.5
    , logging-effect-colors  >=0.1     && <0.2
    , mtl                    >=2.2.2   && <2.3
    , neat-interpolation     >=0.4     && <0.5
    , parsec                 >=3.1.14  && <3.2
    , prettyprinter          >=1.7     && <1.8
    , process                >=1.6.13  && <1.7
    , reflex                 >=0.9.2   && <0.10
    , reflex-fsnotify        >=0.3     && <0.4
    , reflex-process         >=0.3.3   && <0.4
    , tagsoup                >=0.14.8  && <0.15
    , temporary              >=1.3     && <1.4
    , text                   >=1.2.4   && <1.3
    , unix                   >=2.7.2   && <2.8
    , which                  >=0.2     && <0.3
    , yaml                   >=0.11    && <0.12

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    QuasiQuotes
    RecursiveDo
    ScopedTypeVariables
    TemplateHaskell
    TupleSections

executable daml-cucumber
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , daml-cucumber
    , optparse-applicative  >=0.16.1 && <0.17
  other-modules: Paths_daml_cucumber

  ghc-options:      -O -threaded
  hs-source-dirs:   src-exe
  default-language: Haskell2010
